force-app/main/default/objects/Company_Target__c/Company_Target__c.object-meta.xml
<CustomObject>
    <label>Company Target</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>