force-app/main/default/objects/Company_Target__c/fields/ATS_target__c.field-meta.xml
<CustomField>
    <fullName>ATS_target__c</fullName>
    <label>ATS target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>