force-app/main/default/objects/Company_Target__c/fields/Booking_count_target__c.field-meta.xml
<CustomField>
    <fullName>Booking_count_target__c</fullName>
    <label>Booking count target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>