force-app/main/default/objects/Company_Target__c/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <label>Cancellation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>