force-app/main/default/objects/Company_Target__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Project__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5th Avenue</fullName>
            </value>
            <value>
                <fullName>5th Avenue Bliss</fullName>
            </value>
            <value>
                <fullName>All Inventory</fullName>
            </value>
            <value>
                <fullName>All Inventory Avenue</fullName>
            </value>
            <value>
                <fullName>CLUSTER 04</fullName>
            </value>
            <value>
                <fullName>CLUSTER 05</fullName>
            </value>
            <value>
                <fullName>CLUSTER 06</fullName>
            </value>
            <value>
                <fullName>Commercial Edge</fullName>
            </value>
            <value>
                <fullName>EWS</fullName>
            </value>
            <value>
                <fullName>Garden Heights Cluster</fullName>
            </value>
            <value>
                <fullName>MLCP 1</fullName>
            </value>
            <value>
                <fullName>PHASE 01</fullName>
            </value>
            <value>
                <fullName>PHASE 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
            <value>
                <fullName>Phase 5</fullName>
            </value>
            <value>
                <fullName>Phase 6</fullName>
            </value>
            <value>
                <fullName>Phase 8</fullName>
            </value>
            <value>
                <fullName>R Galleria</fullName>
            </value>
            <value>
                <fullName>R Galleria 2 and Edge 2</fullName>
            </value>
            <value>
                <fullName>Runwal Commerz</fullName>
            </value>
            <value>
                <fullName>Tower 1 Cluster</fullName>
            </value>
            <value>
                <fullName>R Galleria 2</fullName>
            </value>
            <value>
                <fullName>Edge 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>