force-app/main/default/objects/Company_Target__c/fields/Conversion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Percent__c</fullName>
    <label>Conversion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>