force-app/main/default/objects/Company_Target__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <label>Financial Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY 2017-2018</fullName>
            </value>
            <value>
                <fullName>FY 2018-2019</fullName>
            </value>
            <value>
                <fullName>FY 2019-2020</fullName>
            </value>
            <value>
                <fullName>FY 2020-2021</fullName>
            </value>
            <value>
                <fullName>FY 2021-2022</fullName>
            </value>
            <value>
                <fullName>FY 2022-2023</fullName>
            </value>
            <value>
                <fullName>FY 2023-2024</fullName>
            </value>
            <value>
                <fullName>FY 2024-2025</fullName>
            </value>
            <value>
                <fullName>FY 2025-2026</fullName>
            </value>
            <value>
                <fullName>FY 2026-2027</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>