force-app/main/default/objects/Company_Target__c/fields/Lead_to_walkin_target__c.field-meta.xml
<CustomField>
    <fullName>Lead_to_walkin_target__c</fullName>
    <label>Lead to walkin % target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>