force-app/main/default/objects/Company_Target__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>August</fullName>
                <isActive>false</isActive>
                <label>August</label>
            </value>
            <value>
                <fullName>December</fullName>
                <isActive>false</isActive>
                <label>December</label>
            </value>
            <value>
                <fullName>January</fullName>
                <isActive>false</isActive>
                <label>January</label>
            </value>
            <value>
                <fullName>July</fullName>
                <isActive>false</isActive>
                <label>July</label>
            </value>
            <value>
                <fullName>June</fullName>
                <isActive>false</isActive>
                <label>June</label>
            </value>
            <value>
                <fullName>March</fullName>
                <isActive>false</isActive>
                <label>March</label>
            </value>
            <value>
                <fullName>May</fullName>
                <isActive>false</isActive>
                <label>May</label>
            </value>
            <value>
                <fullName>November</fullName>
                <isActive>false</isActive>
                <label>November</label>
            </value>
            <value>
                <fullName>October</fullName>
                <isActive>false</isActive>
                <label>October</label>
            </value>
            <value>
                <fullName>September</fullName>
                <isActive>false</isActive>
                <label>September</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>