force-app/main/default/objects/Company_Target__c/fields/of_Leads__c.field-meta.xml
<CustomField>
    <fullName>of_Leads__c</fullName>
    <label># of Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>