force-app/main/default/objects/Company_Target__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Runwal Pinnacle</fullName>
            </value>
            <value>
                <fullName>Runwal Forests</fullName>
            </value>
            <value>
                <fullName>Runwal City Center</fullName>
            </value>
            <value>
                <fullName>Runwal Garden City</fullName>
            </value>
            <value>
                <fullName>7 Mahalaxmi</fullName>
            </value>
            <value>
                <fullName>Garden Heights</fullName>
                <isActive>false</isActive>
                <label>Garden Heights</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>