force-app/main/default/objects/Company_Target__c/fields/Signed_Target_in_Cr__c.field-meta.xml
<CustomField>
    <fullName>Signed_Target_in_Cr__c</fullName>
    <label>Signed Target in Cr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>