force-app/main/default/objects/Company_Target__c/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <label>Sub Project</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Runwal Avenue</fullName>
            </value>
            <value>
                <fullName>Runwal Bliss</fullName>
            </value>
            <value>
                <fullName>5th Avenue - Runwal Avenue</fullName>
            </value>
            <value>
                <fullName>5th Avenue - Runwal Bliss</fullName>
            </value>
            <value>
                <fullName>Runwal Commerz</fullName>
            </value>
            <value>
                <fullName>Runwal Gardens</fullName>
            </value>
            <value>
                <fullName>Runwal Garden City</fullName>
            </value>
            <value>
                <fullName>Runwal MyCity</fullName>
            </value>
            <value>
                <fullName>Runwal Edge Dombivli</fullName>
            </value>
            <value>
                <fullName>7 Mahalaxmi</fullName>
            </value>
            <value>
                <fullName>Runwal Forests</fullName>
            </value>
            <value>
                <fullName>Runwal Pinnacle</fullName>
            </value>
            <value>
                <fullName>R Galleria 2 and Edge 2</fullName>
            </value>
            <value>
                <fullName>Garden Heights</fullName>
                <isActive>false</isActive>
                <label>Garden Heights</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>