force-app/main/default/objects/Company_Target__c/fields/Target_in_Cr__c.field-meta.xml
<CustomField>
    <fullName>Target_in_Cr__c</fullName>
    <label>Target in Cr.</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>