force-app/main/default/objects/Company_Target__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <label>Tower</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cluster__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CL05-03</fullName>
            </value>
            <value>
                <fullName>CL05-04</fullName>
            </value>
            <value>
                <fullName>CL05-05</fullName>
            </value>
            <value>
                <fullName>CL05-06</fullName>
            </value>
            <value>
                <fullName>CL05-07</fullName>
            </value>
            <value>
                <fullName>CL05-08</fullName>
            </value>
            <value>
                <fullName>CL05-09</fullName>
            </value>
            <value>
                <fullName>CL04-09</fullName>
            </value>
            <value>
                <fullName>CL05-01</fullName>
            </value>
            <value>
                <fullName>CL05-10</fullName>
            </value>
            <value>
                <fullName>CL05-11</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>Tower 37</fullName>
            </value>
            <value>
                <fullName>CL04-05</fullName>
            </value>
            <value>
                <fullName>CL04-06</fullName>
            </value>
            <value>
                <fullName>CL04-07</fullName>
            </value>
            <value>
                <fullName>CL04-02</fullName>
            </value>
            <value>
                <fullName>CL04-03</fullName>
            </value>
            <value>
                <fullName>CL04-04</fullName>
            </value>
            <value>
                <fullName>CL04-10</fullName>
            </value>
            <value>
                <fullName>CL04-11</fullName>
            </value>
            <value>
                <fullName>CL04-12</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>CL04-01</fullName>
            </value>
            <value>
                <fullName>CL04-08</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>