force-app/main/default/objects/Company_Target__c/fields/Verticals__c.field-meta.xml
<CustomField>
    <fullName>Verticals__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>R&amp;L</fullName>
            </value>
            <value>
                <fullName>Presales/Direct</fullName>
            </value>
            <value>
                <fullName>OverAll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>