force-app/main/default/objects/Company_Target__c/fields/Walkins_Target__c.field-meta.xml
<CustomField>
    <fullName>Walkins_Target__c</fullName>
    <label>Walkins Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>