force-app/main/default/objects/Company_Target__c/recordTypes/AOP_Vertical_Target.recordType-meta.xml
<RecordType>
    <fullName>AOP_Vertical_Target</fullName>
    <active>true</active>
    <label>AOP Vertical Target</label>
</RecordType>