force-app/main/default/objects/Company_Target__c/recordTypes/Signed_Targets.recordType-meta.xml
<RecordType>
    <fullName>Signed_Targets</fullName>
    <active>true</active>
    <label>Signed Targets</label>
</RecordType>