force-app/main/default/objects/Company_Target__c/recordTypes/Signed_Vertical_Target.recordType-meta.xml
<RecordType>
    <fullName>Signed_Vertical_Target</fullName>
    <active>true</active>
    <label>Signed Vertical Target</label>
</RecordType>